# membership-swiss-manager

./: .env  .env.local.dist  .env.test  .gitignore  .hadolint.yaml  AGENTS.md  CLAUDE.md  Dockerfile  LICENSE  README.md  compose.dev.yaml  compose.override.example.yaml  compose.yaml  composer.json  docker-compose.override.linux.yml  docker-compose.override.traefik.yml  docker-compose.prod.yml  docker-compose.yml  entrypoint.sh  justfile  manage.py  phpstan.dist.neon  phpstan.neon  phpunit.xml.dist  pyproject.toml  rector.php  requirements.dev.txt  requirements.txt  setup.cfg
.github/: dependabot.yml
.github/workflows/: ci.yml  dependabot-auto-merge.yml
config/: bundles.php  services.yaml
core/: admin.py  settings.py  urls.py  utils.py  views.py
core/auth/: remote_user_backend.py
core/camt_importer/: __init__.py  camt_importer.py
core/cvs_manager/: csv_exporter.py  csv_importer.py  format.py
core/fixtures/: 1_member.json  2_subscription.json  3_member_subscription.json  4_invoice.json  camt-demo.xml
core/forms/: autocomplete.py  invoice.py  price_field.py  subscription.py  subscription_user_form.py
core/migrations/: 0001_initial.py  0002_membersubscription_parent.py  0003_remove_member_parent.py  0004_membersubscription_price.py  0005_invoice_unique_reference.py  0006_rename_phone_member_phone_old.py  0007_camtimport.py  0008_alter_camtimport_file.py
core/models/: __init__.py  camt_import.py  invoice.py  member.py  member_subscription.py  subscription.py
core/pdf_generator/: pdf_generator.py
core/sprites/: all-gen.sh
core/templatetags/: custom_filters.py
core/tests/: camt-054-batch.xml  test_admin.py  test_assign.py  test_camt.py  test_csv_price.py  test_dashboard.py  test_pdfs.py  test_utils.py
migrations/: Version20221220221305.php  Version20221220222609.php  Version20221220231240.php  Version20221220231754.php  Version20221220231857.php  Version20221221001619.php  Version20230104230339.php  Version20230120002117.php  Version20230120111143.php  Version20230616093151.php  Version20230616112801.php  Version20230616140346.php
myapp/: admin.py  settings.py  settings_test.py  urls.py  views.py
myapp/models/: enum.py  (+5 more)
public/: index.php
src/: Kernel.php
templates/: base.html  base.html.twig  camt_result.html.twig  dashboard.twig  form.html.twig
translations/: messages+intl-icu.en.yaml  messages+intl-icu.fr.yaml  messages.fr.yaml  validators.fr.yaml
(+135 files in other folders)
