[project]
name = "myproject"
version = "1.0"
requires-python = ">=3.14"
dependencies = [
  "django==6.0.*",
  "gunicorn",
  "python-dotenv",
  "qrbill",
  "cairosvg",
  "pypdf>=6.14.2",
  "pandas",
  "xlsxwriter",
  "django-debug-toolbar>=7.0.0",
  "pycamt",
  "django-phonenumber-field[phonenumberslite]",
  "django-unfold>=0.101.0",
]
[tool.setuptools.packages.find]
exclude = ["tests*", "migrations*", "public*"]

[project.optional-dependencies]
dev = [
  "ruff",
  "rust-just",
  "pytest",
  "beautifulsoup4",
]

[tool.black]
line-length = 88
target-version = ['py37']
include = '\.pyi?$'
exclude = '''
(
    \..*/
    |/node_modules
    |/virtualization
    |migrations/
)
'''
[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"
